--- a/index.html
+++ b/index.html
@@ -1,29 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
+
 <head>
     <meta charset="UTF-8">
-    <title>Sistem Pendaftaran</title>
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pendaftaran HIMATIF - Landing Page</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <style>
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-10px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        body {
+            animation: fadeIn 0.6s ease-in-out;
+        }
+    </style>
 </head>
-<body>
-    <header>
-        <h1>Selamat Datang di Sistem Pendaftaran Himpunan</h1>
-        <p>Silakan login atau registrasi untuk melanjutkan.</p>
+
+<body class="bg-gray-900 text-gray-200 min-h-screen flex flex-col">
+
+    <header class="bg-gray-800 shadow-lg shadow-red-900/20">
+        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+            <div class="flex items-center gap-2">
+                <span class="font-bold text-xl text-red-500">HIMATIF</span>
+            </div>
+
+            <div id="guest-nav" class="space-x-4">
+                <a href="login.html"
+                    class="px-4 py-2 rounded bg-red-600 text-white font-semibold hover:bg-red-700 transition-colors">Login</a>
+                <a href="register.html"
+                    class="px-4 py-2 rounded bg-gray-700 text-gray-200 hover:bg-gray-600 transition-colors">Daftar</a>
+            </div>
+
+            <div id="user-nav" class="space-x-4 items-center" style="display:none;">
+                <span id="welcome-text" class="text-gray-300"></span>
+                <a id="dashboard-link" href="#"
+                    class="px-4 py-2 rounded bg-red-600 text-white font-semibold hover:bg-red-700 transition-colors">Dashboard</a>
+                <button onclick="logout()"
+                    class="px-4 py-2 rounded bg-gray-700 text-gray-200 hover:bg-gray-600 transition-colors">Logout</button>
+            </div>
+
+        </div>
     </header>
 
-    <main>
-        <div id="guest-view">
-            <a href="login.html"><button>Login</button></a>
-            <a href="register.html"><button>Register</button></a>
-        </div>
-
-        <div id="user-view" style="display:none;">
-            <p>Anda sudah login. <a id="dashboard-link" href="#"><button>Pergi ke Dashboard</button></a></p>
-            <button onclick="logout()">Logout</button>
-        </div>
+    <main class="flex-1 container mx-auto px-4 py-12">
+        <section class="mb-12 text-center">
+            <h1 class="text-3xl md:text-5xl font-bold mb-4 text-red-500">Pendaftaran Anggota Baru HIMATIF</h1>
+            <p class="text-lg text-gray-300 mb-6">Bergabunglah bersama keluarga besar Himpunan Mahasiswa Teknik
+                Informatika!</p>
+            <div class="flex flex-col md:flex-row justify-center gap-8 mt-8">
+                <div class="bg-gray-800 rounded-lg shadow-lg p-6 w-full md:w-1/3 border border-gray-700">
+                    <h2 class="font-semibold text-lg mb-2 text-red-500">Timeline Pendaftaran</h2>
+                    <ul class="text-gray-300 text-left list-disc pl-5">
+                        <li>Pendaftaran: 1 - 15 Juli 2025</li>
+                        <li>Seleksi Berkas: 16 - 18 Juli 2025</li>
+                        <li>Wawancara: 20 - 22 Juli 2025</li>
+                        <li>Pengumuman: 25 Juli 2025</li>
+                    </ul>
+                </div>
+                <div class="bg-gray-800 rounded-lg shadow-lg p-6 w-full md:w-1/3 border border-gray-700">
+                    <h2 class="font-semibold text-lg mb-2 text-red-500">Persyaratan</h2>
+                    <ul class="text-gray-300 text-left list-disc pl-5">
+                        <li>Mahasiswa aktif S1 Teknik Informatika</li>
+                        <li>Mengisi data diri & motivasi</li>
+                        <li>Mengunggah CV (format PDF, max 2MB)</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="text-center mt-12">
+            <h2 class="text-2xl font-bold mb-4 text-red-500">Kenapa Bergabung HIMATIF?</h2>
+            <p class="text-gray-300 max-w-2xl mx-auto">Dapatkan pengalaman organisasi, jaringan profesional, pelatihan
+                softskill, dan kesempatan berkontribusi nyata di lingkungan kampus.</p>
+        </section>
     </main>
+
+    <footer class="bg-gray-800 py-4 text-center text-gray-500 text-sm mt-10">
+        &copy; 2025 HIMATIF - Himpunan Mahasiswa Teknik Informatika
+    </footer>
 
     <script src="js/auth.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
