--- a/login.html
+++ b/login.html
@@ -1,26 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login - Pendaftaran HIMATIF</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <style>
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
+    }
+    body {
+      animation: fadeIn 0.5s ease-in-out;
+    }
+  </style>
 </head>
-<body>
-    <header>
-        <h1>Login</h1>
-    </header>
-    <main>
-        <form id="loginForm">
-            <label for="loginNim">NIM:</label>
-            <input type="text" id="loginNim" required>
-            <label for="loginPassword">Password:</label>
-            <input type="password" id="loginPassword" required>
-            <button type="submit">Login</button>
-        </form>
-        <p>Belum punya akun? <a href="register.html">Registrasi di sini</a></p>
-    </main>
-
-    <script src="js/auth.js"></script>
-    <script src="js/login.js"></script>
+<body class="bg-gray-900 min-h-screen flex items-center justify-center">
+  <div class="bg-gray-800 rounded-lg shadow-lg max-w-md w-full p-8 border border-gray-700">
+    <div class="mb-6 text-center">
+      <!-- <img src="logo.png" class="h-12 mx-auto mb-2" alt="HIMATIF"> -->
+      <h1 class="font-bold text-2xl text-red-500">Login HIMATIF</h1>
+    </div>
+    <form id="loginForm" class="space-y-4">
+      <div>
+        <label class="block mb-1 font-medium text-gray-300">NIM</label>
+        <input type="text" name="NPM" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-red-500" required>
+      </div>
+      <div>
+        <label class="block mb-1 font-medium text-gray-300">Password</label>
+        <input type="password" name="password" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-red-500" required>
+      </div>
+      <button type="submit" class="w-full bg-red-600 text-white py-2 rounded font-semibold hover:bg-red-700 transition-colors">Login</button>
+    </form>
+    <p class="text-sm text-center mt-4 text-gray-300">Belum punya akun? <a href="register.html" class="text-red-500 hover:underline">Daftar</a></p>
+    <p class="text-sm text-center mt-2">
+      <a href="index.html" class="text-gray-400 hover:text-red-500 hover:underline">← Kembali ke Beranda</a>
+    </p>
+  </div>
+  <script src="js/auth.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
