--- a/form.html
+++ b/form.html
@@ -67,6 +67,11 @@
                     <label for="motivation" class="block mb-2 font-medium text-gray-300">Motivasi Bergabung</label>
                     <textarea id="motivation" name="motivation" rows="5" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" placeholder="Jelaskan alasan Anda ingin bergabung..." required></textarea>
                 </div>
+                
+                <div>
+                    <label for="vision_mission" class="block mb-2 font-medium text-gray-300">Visi & Misi Masuk Divisi</label>
+                    <textarea id="vision_mission" name="vision_mission" rows="5" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" placeholder="Jelaskan visi dan misi Anda untuk divisi yang dipilih..." required></textarea>
+                </div>
 
                 <div>
                     <label for="cv" class="block mb-2 font-medium text-gray-300">Upload CV (PDF, max 2MB)</label>
@@ -79,8 +84,7 @@
 
             </form>
         </div>
-
-        </div>
+    </div>
   </main>
 
   <script src="js/auth.js"></script>
