--- a/register.html
+++ b/register.html
@@ -62,6 +62,6 @@
   </div>
   
   <script src="js/auth.js"></script>
-  <script src="js/register.js"></script>
+  <script src="js/regiter.js"></script>
 </body>
 </html>
