--- a/login.html
+++ b/login.html
@@ -13,7 +13,6 @@
                 opacity: 0;
                 transform: scale(0.95);
             }
-
             to {
                 opacity: 1;
                 transform: scale(1);
@@ -26,23 +25,22 @@
     </style>
 </head>
 
-<body class="bg-gray-900 min-h-screen flex items-center justify-center">
-    <div class="bg-gray-800 rounded-lg shadow-lg max-w-md w-full p-8 border border-gray-700">
+<body class="bg-gray-900 min-h-screen flex items-center justify-center p-4">
+    <div class="bg-gray-800 rounded-lg shadow-lg max-w-md w-full p-6 md:p-8 border border-gray-700">
         <div class="mb-6 text-center">
-            <!-- <img src="logo.png" class="h-12 mx-auto mb-2" alt="HIMATIF"> -->
-            <h1 class="font-bold text-2xl text-red-500">Login HIMATIF</h1>
+            <h1 class="font-bold text-xl md:text-2xl text-red-500">Login HIMATIF</h1>
         </div>
         <form id="loginForm" class="space-y-4">
             <div>
                 <label class="block mb-1 font-medium text-gray-300">NIM</label>
                 <input type="text" name="NPM"
-                    class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-red-500"
+                    class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500"
                     required>
             </div>
             <div>
                 <label class="block mb-1 font-medium text-gray-300">Password</label>
                 <input type="password" name="password"
-                    class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-red-500"
+                    class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500"
                     required>
             </div>
             <button type="submit"
