--- a/register.html
+++ b/register.html
@@ -1,67 +1,67 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register - Pendaftaran HIMATIF</title>
-  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <style>
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.95); }
-      to { opacity: 1; transform: scale(1); }
-    }
-    body {
-      animation: fadeIn 0.5s ease-in-out;
-    }
-    .date-input-dark-icon {
-      color-scheme: dark;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Register - Pendaftaran HIMATIF</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <style>
+        @keyframes fadeIn {
+            from { opacity: 0; transform: scale(0.95); }
+            to { opacity: 1; transform: scale(1); }
+        }
+        body {
+            animation: fadeIn 0.5s ease-in-out;
+        }
+        .date-input-dark-icon {
+            color-scheme: dark;
+        }
+    </style>
 </head>
-<body class="bg-gray-900 min-h-screen flex items-center justify-center py-8">
-  <div class="bg-gray-800 rounded-lg shadow-lg max-w-md w-full p-8 border border-gray-700">
-    <div class="mb-6 text-center">
-      <h1 class="font-bold text-2xl text-red-500">Pendaftaran HIMATIF</h1>
+<body class="bg-gray-900 min-h-screen flex items-center justify-center py-8 p-4">
+    <div class="bg-gray-800 rounded-lg shadow-lg max-w-md w-full p-6 md:p-8 border border-gray-700">
+        <div class="mb-6 text-center">
+            <h1 class="font-bold text-xl md:text-2xl text-red-500">Pendaftaran HIMATIF</h1>
+        </div>
+        <form id="registerForm" class="space-y-3">
+            <div>
+                <label class="block mb-1 font-medium text-gray-300">Nama Lengkap</label>
+                <input type="text" name="name" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
+            </div>
+            <div>
+                <label class="block mb-1 font-medium text-gray-300">NPM</label>
+                <input type="text" name="nim" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
+            </div>
+            <div>
+                <label class="block mb-1 font-medium text-gray-300">Tempat Lahir</label>
+                <input type="text" name="birth_place" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
+            </div>
+            <div>
+                <label class="block mb-1 font-medium text-gray-300">Tanggal Lahir</label>
+                <input type="date" name="birth_date" class="date-input-dark-icon w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
+            </div>
+            <div>
+                <label class="block mb-1 font-medium text-gray-300">Email</label>
+                <input type="email" name="email" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
+            </div>
+            <div>
+                <label class="block mb-1 font-medium text-gray-300">Password</label>
+                <input type="password" id="password" name="password" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
+            </div>
+            <div>
+                <label class="block mb-1 font-medium text-gray-300">Konfirmasi Password</label>
+                <input type="password" id="password_confirmation" name="password_confirmation" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
+            </div>
+            <button type="submit" class="w-full bg-red-600 text-white py-2 rounded font-semibold hover:bg-red-700 transition-colors">Daftar</button>
+        </form>
+        <p class="text-sm text-center mt-4 text-gray-300">Sudah punya akun? <a href="login.html" class="text-red-500 hover:underline">Login</a></p>
+        <p class="text-sm text-center mt-2">
+            <a href="index.html" class="text-gray-400 hover:text-red-500 hover:underline">← Kembali ke Beranda</a>
+        </p>
     </div>
-    <form id="registerForm" class="space-y-3">
-      <div>
-        <label class="block mb-1 font-medium text-gray-300">Nama Lengkap</label>
-        <input type="text" name="name" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
-      </div>
-      <div>
-        <label class="block mb-1 font-medium text-gray-300">NPM</label>
-        <input type="text" name="nim" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
-      </div>
-      <div>
-        <label class="block mb-1 font-medium text-gray-300">Tempat Lahir</label>
-        <input type="text" name="birth_place" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
-      </div>
-      <div>
-        <label class="block mb-1 font-medium text-gray-300">Tanggal Lahir</label>
-        <input type="date" name="birth_date" class="date-input-dark-icon w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
-      </div>
-      <div>
-        <label class="block mb-1 font-medium text-gray-300">Email</label>
-        <input type="email" name="email" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
-      </div>
-      <div>
-        <label class="block mb-1 font-medium text-gray-300">Password</label>
-        <input type="password" id="password" name="password" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
-      </div>
-      <div>
-        <label class="block mb-1 font-medium text-gray-300">Konfirmasi Password</label>
-        <input type="password" id="password_confirmation" name="password_confirmation" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
-      </div>
-      <button type="submit" class="w-full bg-red-600 text-white py-2 rounded font-semibold hover:bg-red-700 transition-colors">Daftar</button>
-    </form>
-    <p class="text-sm text-center mt-4 text-gray-300">Sudah punya akun? <a href="login.html" class="text-red-500 hover:underline">Login</a></p>
-    <p class="text-sm text-center mt-2">
-      <a href="index.html" class="text-gray-400 hover:text-red-500 hover:underline">← Kembali ke Beranda</a>
-    </p>
-  </div>
-  
-  <script src="js/auth.js"></script>
-  <script src="js/regiter.js"></script>
+    
+    <script src="js/auth.js"></script>
+    <script src="js/register.js"></script>
 </body>
 </html>
